# octopus

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fastlane/: Fastfile  README.md  README_FASTLANE.md
src/fastlane/android/: Fastfile
src/fastlane/helpers/: CommonHelper.rb
src/fastlane/ios/: Fastfile
src/octopus/: main.py
src/octopus/builder/: __init__.py  builder.py  builder_flutter_android.py  builder_flutter_ios.py
src/octopus/deploy/: __init__.py  deploy.py  deploy_app_store.py  deploy_google_play_store.py
src/octopus/git/: __init__.py  git_checkout_manager.py  git_manager.py
src/octopus/helper/: __init__.py  flutter_main_finder.py  flutter_melos_checker.py
