[tool.poetry]
name = "octopus"
version = "0.1.0"
description = ""
authors = ["JosephNK <nkw0608@gmail.com>"]
readme = "README.md"
packages = [{include = "octopus", from = "src"}] 

[tool.poetry.dependencies]
python = "^3.11"
poethepoet = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "python -m src.octopus.main"